Change submit to button

--- a/Events/onchange.html
+++ b/Events/onchange.html
@@ -61,7 +61,7 @@
 
         <p>
 
-                   <input type="submit"   value="Go!"    onchange="changed(this);">
+                   <input type="button"   value="???"    onchange="changed(this);">
 
      
 
