+ Link to jQuery

--- a/Node/Document/createElement.html
+++ b/Node/Document/createElement.html
@@ -23,6 +23,7 @@ function createElements() {
 </head>
 <body onload='createElements()'>
 
+  Compare with <a href='https://github.com/ReneNyffenegger/about-jQuery/blob/master/api/dynamic_div_creation.html'>Dynamic creation of divs in jQuery</a>.
 
 </body>
 </html>
