--- a/Node/Element/offsetWidth-offsetHeight.html
+++ b/Node/Element/offsetWidth-offsetHeight.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-  <title>TODO</title>
+  <title>offsetWidth / offsetHeight</title>
 
   <script type="text/javascript">
 
@@ -27,4 +27,3 @@
 
 </body>
 </html>
-
