+ img of getElementsByName

--- a/Node/Document/getElementsByName.html
+++ b/Node/Document/getElementsByName.html
@@ -5,9 +5,12 @@
   <title>document.getElementsByName</title>
 
   <style type="text/css">
-    div {height: 20px;
-         border: red 1px solid;
-        }
+    div {
+      height:  20px;
+      width:  300px;
+      margin: 5px;
+      border: #ffbbaa 1px solid;
+    }
   </style>
 
   <script type="text/javascript">
@@ -31,10 +34,10 @@
 
 <body onload='main();'>
 
-  <div name="name_one"></div>
-  <div name="name_two"></div>
-  <div name="name_one"></div>
-  <div name="name_two"></div>
+  <div name="name_one">ABC</div>
+  <div name="name_two">DEF</div>
+  <div name="name_one">GHI</div>
+  <div name="name_two">JKL</div>
 
 </body>
 </html>
