--- a/Node/Document/createElement.html
+++ b/Node/Document/createElement.html
@@ -7,23 +7,37 @@
 <script type="text/JavaScript">
 
 function createElements() {
-  
-  var elem_body = document.getElementsByTagName('body') [0];
 
-  elem_div = document.createElement('div');
+//
+// Dynamically create an element
+//
+   div_elem = document.createElement('div');
 
-  elem_div.innerHTML = "Created.";
+//
+// Change the new element's content:
+//
+   div_elem.innerHTML             = "Created.";
 
-  elem_div.style.backgroundColor = '#ff0000'; // https://github.com/ReneNyffenegger/about-css/blob/master/javascript/change_style.html
+//
+// Modify some of the element's styles:
+//
+   div_elem.style.color           = 'yellow';
+   div_elem.style.backgroundColor = '#ff0000'; // https://github.com/ReneNyffenegger/about-css/blob/master/javascript/change_style.html
+   div_elem.style.fontWeight      = 'bold';
+   div_elem.style.float           = 'left';
 
-  elem_body.appendChild(elem_div);
+//
+// Finally add it into the DOM tree
+//
+   document.body.appendChild(div_elem);
+
 }
 
 </script>
 </head>
 <body onload='createElements()'>
 
-  Compare with <a href='https://github.com/ReneNyffenegger/about-jQuery/blob/master/api/dynamic_div_creation.html'>Dynamic creation of divs in jQuery</a>.
+  <div>This div already was in the html document</div>
 
 </body>
 </html>
