--- a/Node/Document/createElement.html
+++ b/Node/Document/createElement.html
@@ -22,7 +22,7 @@ function createElements() {
 // Modify some of the element's styles:
 //
    div_elem.style.color           = 'yellow';
-   div_elem.style.backgroundColor = '#ff0000'; // https://github.com/ReneNyffenegger/about-css/blob/master/javascript/change_style.html
+   div_elem.style.backgroundColor = '#ff0000';
    div_elem.style.fontWeight      = 'bold';
    div_elem.style.float           = 'left';
 
